--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,3 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "./node_modules/ts-standard/eslintrc.json"
-  ],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  }
+	"extends": "next"
 }
